--- a/Languages/ChineseSimplified/Keyed/Common.xml
+++ b/Languages/ChineseSimplified/Keyed/Common.xml
@@ -2,12 +2,14 @@
 <LanguageData>
   <SK_FlankingBonus_SettingsListItemName>包抄增益</SK_FlankingBonus_SettingsListItemName>
   <SK_FlankingBonus_ModSettingsAllowSideFlanking>侧翼包抄：</SK_FlankingBonus_ModSettingsAllowSideFlanking>
-  <SK_FlankingBonus_ModSettingsSideFlankingDamageBonus>侧翼包抄伤害增益:</SK_FlankingBonus_ModSettingsSideFlankingDamageBonus>
+  <SK_FlankingBonus_ModSettingsSideFlankingRangedDamageBonus>侧翼包抄伤害增益 (Ranged):</SK_FlankingBonus_ModSettingsSideFlankingRangedDamageBonus>
+  <SK_FlankingBonus_ModSettingsSideFlankingMeleeDamageBonus>侧翼包抄伤害增益 (Melee):</SK_FlankingBonus_ModSettingsSideFlankingMeleeDamageBonus>
   <SK_FlankingBonus_ModSettingsSideFlankingAimChanceBonus>侧翼包抄瞄准增益:</SK_FlankingBonus_ModSettingsSideFlankingAimChanceBonus>
   <SK_FlankingBonus_ModSettingsSideFlankingPassCoverChanceBonus>侧翼包抄忽略掩体增益:</SK_FlankingBonus_ModSettingsSideFlankingPassCoverChanceBonus>
   <SK_FlankingBonus_ModSettingsSideFlankingMeleeHitChanceBonus>侧翼包抄近战命中率增益:</SK_FlankingBonus_ModSettingsSideFlankingMeleeHitChanceBonus>
   <SK_FlankingBonus_ModSettingsAllowBackFlanking>后方包抄:</SK_FlankingBonus_ModSettingsAllowBackFlanking>
-  <SK_FlankingBonus_ModSettingsBackFlankingDamageBonus>后方包抄伤害增益:</SK_FlankingBonus_ModSettingsBackFlankingDamageBonus>
+  <SK_FlankingBonus_ModSettingsBackFlankingRangedDamageBonus>后方包抄伤害增益 (Ranged):</SK_FlankingBonus_ModSettingsBackFlankingRangedDamageBonus>
+  <SK_FlankingBonus_ModSettingsBackFlankingMeleeDamageBonus>后方包抄伤害增益 (Melee):</SK_FlankingBonus_ModSettingsBackFlankingMeleeDamageBonus>
   <SK_FlankingBonus_ModSettingsBackFlankingAimChanceBonus>后方包抄瞄准增益:</SK_FlankingBonus_ModSettingsBackFlankingAimChanceBonus>
   <SK_FlankingBonus_ModSettingsBackFlankingPassCoverChanceBonus>后方包抄忽略掩体增益:</SK_FlankingBonus_ModSettingsBackFlankingPassCoverChanceBonus>
   <SK_FlankingBonus_ModSettingsBackFlankingMeleeHitChanceBonus>后方包抄近战命中率增益:</SK_FlankingBonus_ModSettingsBackFlankingMeleeHitChanceBonus>
